# automation-code-departmemt

./: .gitignore  Cargo.toml  README.md
config/: workspace.toml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent.rs  artifact.rs  lib.rs  message.rs  role.rs
crates/agents/: Cargo.toml
crates/agents/src/: ba.rs  dev.rs  frontend.rs  lib.rs  pm.rs  test.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lane_queue.rs  lib.rs  resume.rs  session.rs  store.rs  transcript.rs  workspace.rs
crates/llm-claude/: Cargo.toml
crates/llm-claude/src/: client.rs  lib.rs  prompt.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: lib.rs  playwright.rs
crates/memory/: Cargo.toml
crates/memory/src/: assembler.rs  lib.rs  sqlite.rs  tokens.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: builtin.rs  cargo_tool.rs  channel.rs  lib.rs  mongo_tool.rs  playwright_tool.rs  registry.rs  skill.rs  telegram.rs  tool.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  auth.rs  channels.rs  lib.rs  state.rs  telegram.rs  ui.rs  ws.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  sqlite.rs
docs/: openclaw-gap-analysis.md  skills-catalog.md
skills/api-tester/: SKILL.md
skills/api-tester/references/: http-status-codes.md
skills/api-tester/scripts/: test-endpoint.sh
skills/ba-requirements/: SKILL.md
skills/ba-requirements/assets/: story-template.json
skills/ba-requirements/references/: gherkin-guide.md
skills/ba-requirements/scripts/: validate-stories.sh
skills/code-reviewer/: SKILL.md
skills/code-reviewer/references/: review-checklist.md
skills/code-reviewer/scripts/: review-diff.sh
skills/mongodb/: SKILL.md
skills/mongodb/assets/: indexes.json
skills/mongodb/references/: schema-patterns.md
skills/mongodb/scripts/: create-indexes.sh  seed-data.sh  setup-replica.sh
skills/playwright-e2e/: SKILL.md
skills/playwright-e2e/assets/: BasePage.ts.template  playwright.config.ts.template
skills/playwright-e2e/references/: selectors-guide.md
skills/playwright-e2e/scripts/: run-tests.sh  scaffold-test.sh
skills/pm-sprint-planner/: SKILL.md
skills/pm-sprint-planner/assets/: sprint-template.json
skills/pm-sprint-planner/references/: agile-ceremonies.md
skills/pm-sprint-planner/scripts/: generate-sprint.sh
skills/rust-backend/: SKILL.md
skills/rust-backend/assets/: Cargo.service.toml.template
skills/rust-backend/references/: axum-patterns.md  error-handling.md
skills/rust-backend/scripts/: check-quality.sh  scaffold-service.sh
skills/vuejs-frontend/: SKILL.md
skills/vuejs-frontend/assets/: component.vue.template  store.ts.template
skills/vuejs-frontend/references/: composition-api.md
skills/vuejs-frontend/scripts/: scaffold-composable.sh  scaffold-page.sh
