[workspace]
resolver = "2"
members = [
    "crates/agent-core",
    "crates/llm-claude",
    "crates/gateway",
    "crates/mcp-client",
    "crates/agents",
    "crates/storage",
    "crates/memory",
    "crates/plugin",
    "crates/server",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/phatnguyenmeai/automation-code-departmemt"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
