[package]
name = "agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
llm-claude = { path = "../llm-claude" }
mcp-client = { path = "../mcp-client" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
reqwest.workspace = true
