[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentdept"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
gateway = { path = "../gateway" }
storage = { path = "../storage" }
llm-claude = { path = "../llm-claude" }
agents = { path = "../agents" }
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
